--- a/src/GUI/panelScore.form
+++ b/src/GUI/panelScore.form
@@ -60,7 +60,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Stencil" size="36" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Score..."/>
+        <Property name="text" type="java.lang.String" value="Score general battleship"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
